tests/snapshots/parser/snapshots/snapshot_parser__snapshots__parser__snapshot_index_expression.snap
---
source: tests/snapshots/parser/mod.rs
expression: output
---
Program {
    statements: [
        Expression {
            expression: Index {
                left: Identifier {
                    name: Symbol(
                        0,
                    ),
                    span: Span {
                        start: Position {
                            line: 1,
                            column: 0,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    id: ExprId(
                        1,
                    ),
                },
                index: Integer {
                    value: 0,
                    span: Span {
                        start: Position {
                            line: 1,
                            column: 4,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    id: ExprId(
                        2,
                    ),
                },
                span: Span {
                    start: Position {
                        line: 1,
                        column: 0,
                    },
                    end: Position {
                        line: 1,
                        column: 6,
                    },
                },
                id: ExprId(
                    3,
                ),
            },
            has_semicolon: true,
            span: Span {
                start: Position {
                    line: 1,
                    column: 0,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
        },
        Expression {
            expression: Index {
                left: Identifier {
                    name: Symbol(
                        1,
                    ),
                    span: Span {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    id: ExprId(
                        4,
                    ),
                },
                index: Identifier {
                    name: Symbol(
                        2,
                    ),
                    span: Span {
                        start: Position {
                            line: 1,
                            column: 12,
                        },
                        end: Position {
                            line: 1,
                            column: 15,
                        },
                    },
                    id: ExprId(
                        5,
                    ),
                },
                span: Span {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 16,
                    },
                },
                id: ExprId(
                    6,
                ),
            },
            has_semicolon: true,
            span: Span {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 17,
                },
            },
        },
        Expression {
            expression: Index {
                left: Index {
                    left: Identifier {
                        name: Symbol(
                            3,
                        ),
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 18,
                            },
                            end: Position {
                                line: 1,
                                column: 24,
                            },
                        },
                        id: ExprId(
                            7,
                        ),
                    },
                    index: Identifier {
                        name: Symbol(
                            4,
                        ),
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 25,
                            },
                            end: Position {
                                line: 1,
                                column: 26,
                            },
                        },
                        id: ExprId(
                            8,
                        ),
                    },
                    span: Span {
                        start: Position {
                            line: 1,
                            column: 18,
                        },
                        end: Position {
                            line: 1,
                            column: 27,
                        },
                    },
                    id: ExprId(
                        9,
                    ),
                },
                index: Identifier {
                    name: Symbol(
                        5,
                    ),
                    span: Span {
                        start: Position {
                            line: 1,
                            column: 28,
                        },
                        end: Position {
                            line: 1,
                            column: 29,
                        },
                    },
                    id: ExprId(
                        10,
                    ),
                },
                span: Span {
                    start: Position {
                        line: 1,
                        column: 18,
                    },
                    end: Position {
                        line: 1,
                        column: 30,
                    },
                },
                id: ExprId(
                    11,
                ),
            },
            has_semicolon: true,
            span: Span {
                start: Position {
                    line: 1,
                    column: 18,
                },
                end: Position {
                    line: 1,
                    column: 31,
                },
            },
        },
    ],
    span: Span {
        start: Position {
            line: 1,
            column: 0,
        },
        end: Position {
            line: 1,
            column: 31,
        },
    },
}
