tests/snapshots/parser/snapshots/snapshot_parser__snapshots__parser__snapshot_simple_arithmetic.snap
---
source: tests/snapshots/parser/mod.rs
expression: output
---
Program {
    statements: [
        Let {
            name: Symbol(
                0,
            ),
            type_annotation: None,
            value: Infix {
                left: Integer {
                    value: 10,
                    span: Span {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 15,
                        },
                    },
                    id: ExprId(
                        1,
                    ),
                },
                operator: "+",
                right: Infix {
                    left: Integer {
                        value: 20,
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 18,
                            },
                            end: Position {
                                line: 1,
                                column: 20,
                            },
                        },
                        id: ExprId(
                            2,
                        ),
                    },
                    operator: "*",
                    right: Integer {
                        value: 5,
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 23,
                            },
                            end: Position {
                                line: 1,
                                column: 24,
                            },
                        },
                        id: ExprId(
                            3,
                        ),
                    },
                    span: Span {
                        start: Position {
                            line: 1,
                            column: 18,
                        },
                        end: Position {
                            line: 1,
                            column: 24,
                        },
                    },
                    id: ExprId(
                        4,
                    ),
                },
                span: Span {
                    start: Position {
                        line: 1,
                        column: 13,
                    },
                    end: Position {
                        line: 1,
                        column: 24,
                    },
                },
                id: ExprId(
                    5,
                ),
            },
            span: Span {
                start: Position {
                    line: 1,
                    column: 0,
                },
                end: Position {
                    line: 1,
                    column: 25,
                },
            },
        },
    ],
    span: Span {
        start: Position {
            line: 1,
            column: 0,
        },
        end: Position {
            line: 1,
            column: 25,
        },
    },
}
